--- a/begriffe.tex
+++ b/begriffe.tex
@@ -8,43 +8,45 @@ Und zum anderen werden viele dieser Begriffe erläutert, welche noch häufig zum
 \section{Data Science}
 
 Data Science wird generell als die Extraktion von Wissen aus Daten bezeichnet. 
-Dabei werden die Teilbereiche, Statistik und Mathematik, Computer Science und Machine Learning sowie einige weitere, in diesem Begriff zusammengefasst. 
+Dabei werden die Fachbereiche Statistik und Mathematik, Computer Science und Machine Learning sowie einige weitere, mit diesem Begriff zusammengefasst. 
 Das Gebiet für sich wird auch als Berufstätigkeit bezeichnet, wobei meist spezialisierte Formen für die Berufsbezeichnung verwendet werden.\\
 
 Damit Wissen aus Daten überhaupt extrahiert werden kann, muss ein ganzer Prozess durchlaufen werden. 
-Dieser beginnt mit dem zusammentragen von Rohdaten aus der Realität, welche aber zu diesem Zeitpunkt noch keinen Zusammenhang offenbaren. 
-Im zweiten Prozessschritt werden diese Daten meist umgebaut und neu sortiert wobei dieser Schritt nicht immer erforderlich ist. 
+Dieser beginnt mit dem zusammentragen von Rohdaten aus der Realität, welche zu diesem Zeitpunkt noch keinen Zusammenhang offenbaren. 
+Im zweiten Prozessschritt werden diese Daten meist umgebaut und neu sortiert, wobei dieser Schritt nicht immer erforderlich ist. 
 Auf die zurecht gelegten Daten besteht nun die Möglichkeit Modelle, Algorithmen sowie weitere Extraktionen durchzuführen. 
-Die erneut extrahierten Daten werden in dem zweiten Prozessschritt als Ausgangsdaten verwendet. 
-Auf diese Daten ausgeführte Modelle und Algorithmen liefern Ergebnisse die visuell dargestellt für eine größer Gruppe an Personen geeignet ist. 
-Aus diesem gelernten Wissen besteht zusätzlich die Möglichkeit dieses zum Generieren von neuen Daten zu verwenden und neue Modelle zu entwickeln, die zum Beispiel Vorgänge in der Natur noch akkurater wiederspiegeln.
+Die erneut extrahierten Daten werden weiterer Folge als Ausgangsdaten verwendet. 
+Auf diese Daten ausgeführte Modelle und Algorithmen liefern Ergebnisse die visuell dargestellt für eine größer Gruppe an Personen geeignet sind. 
+-----Aus diesem gelernten Wissen besteht zusätzlich die Möglichkeit dieses zum Generieren von neuen Daten zu verwenden und neue Modelle zu entwickeln, die zum Beispiel Vorgänge in der Natur noch akkurater wiederspiegeln.
 
 \section{Machine Intelligence}
 
-Maschine Intelligenz ist ein Begriff der so an sich noch nicht Definiert worden ist. 
+Maschine Intelligence ist ein Begriff der in dieser Form noch nicht definiert worden ist. 
 Einige namhafte Unternehmen wie Google Inc. und Microsoft Corporation bieten jeweils unterschiedliche Definitionen oder Beschreibungen. 
-Dieser wird aber von allen ähnlich beschrieben und definiert. 
-Es bezeichnet einen Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen die in näherer Beziehung dazu stehen. 
+Beschreibungen, weicht aber unwesentlich von einander ab.
+%Dieser wird aber von allen ähnlich beschrieben und definiert.
+Er wird als Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen die in näherer Beziehung dazu stehen genannt. 
 
 \section{Machine Learning}
 \label{sec:Machine Learning}
 
 Machine Learning definiert eine große Anzahl an Theorien und Umsetzungen von nicht explizit programmierten Abläufen. 
-Diese wurden aus Studien in den Bereichen der Mustererkennung und Rechnerische Lerntheorien mit Künstlicher Intelligenz teilweise entwickelt. 
+Diese wurden aus Studien in den Bereichen der Mustererkennung und der rechnerischen Lerntheorie mit Künstlicher Intelligenz teilweise entwickelt. 
 Dieses Gebiet umfasst im Jahr 2016 aber sehr viel mehr. 
-So existieren zusätzlich Ansätze aus dem Bereich der Biologie wie zum Beispiel Neuronale Netzwerke, die dem Gehirn nach empfunden sind und Genetische Algorithmen die der Weiterentwicklung eines Lebewesen ähneln. 
-Ein ganz andere Zugang wurde in der Sowjetunion verfolgte, mit sogenannte 'Support Vektor Machines', bei welchen man einen rein mathematischen Ansatz verfolgte.
+So existieren zusätzliche Ansätze aus dem Bereich der Biologie wie zum Beispiel Neuronale Netzwerke, die dem Gehirn nachempfunden sind und genetische Algorithmen die der Weiterentwicklung eines Lebewesen ähneln. 
+Ein ganz anderer Zugang wurde in der Sowjetunion verfolgt, mit sogenannten 'Support Vektor Machines', bei welchen man einen rein mathematischen Ansatz anstrebt.
 
 \section{Neuronale Netzwerke}
 
-Neuronale Netzwerke auch bekannt im Jahre 2016 unter dem Begriff 'Deep Learning'. \\
+Neuronale Netzwerke sind im Jahr 2016 auch bekannt unter dem Begriff 'Deep Learning'. \\
 
-Die Theorie und die ersten Grundlagen wurden im Jahre 1943 von Warrn McCulloch und Walter Pitts geschaffen, die ein Modell entwickelten aber nicht die technischen Möglichkeiten hatten dieses umzusetzen.
-Dieses basierte auf Mathematik und Algorithmen und führte zur 'Threshold Logik'. 
-Durch den 'Backpropagation'-Algorithmus im Jahre 1975, wurden es möglich Netzwerke mit mehr als drei Ebenen zu trainieren. \\
+Die Theorie und die ersten Grundlagen wurden im Jahre 1943 von Warrn McCulloch und Walter Pitts geschaffen, die ein Modell entwickelten, jedoch nicht die technischen Möglichkeiten hatten dieses umzusetzen.
+Dieses %basierte auf Mathematik und Algorithmen und 
+führte zur 'Threshold Logik'. 
+Durch den 'Backpropagation'-Algorithmus im Jahre 1975 war es möglich, Netzwerke mit mehr als drei Ebenen zu trainieren. \\
 
-Neuronale Netzwerke bestehen aus Neuronen die mit einander Verbunden sind und gemeinsam ein Netzwerk ergeben, welches dem Gehirn nachempfunden ist. 
-Die Verbindungen sind nicht fest vorgegeben sondern können auch zum Beispiel Schleife bilden.
+Neuronale Netzwerke bestehen aus Neuronen die miteinander verbunden sind und gemeinsam ein Netzwerk ergeben, welches dem Gehirn gleicht. %nachempfunden ist. 
+Die Verbindungen sind nicht fest vorgegeben, sondern können auch zum Beispiel eine Schleife bilden.
 
 %TODO: you can do anything with it, if it can be designed as a function
 
@@ -53,28 +55,28 @@ Die Verbindungen sind nicht fest vorgegeben sondern können auch zum Beispiel Sc
 
 Abbildung ( Aufbau eines Neurons ) - TikZ Grafik \\
 
-Ein Neuron wurde einer Nervenzelle in einem Gehirn nachempfunden und besteht aus:
+Ein Neuron wurde einer Nervenzelle in einem Gehirn nachempfunden mit den folgenden Bestandteilen:
 \paragraph{Informationseingangsstrom} ist der Dateneingang, wobei ein Neuron ein bis theoretisch unendlich viele solcher Eingänge haben könnte. 
 Dies hängt von der jeweiligen Architektur des Netzwerks ab.
 
-\paragraph{Informationsgewichtung} bezeichnet die Gewichtung mit der, der Eingangsstrom gewertet wird. 
+\paragraph{Informationsgewichtung} bezeichnet die Gewichtung mit der der Eingangsstrom gewertet wird. 
 %Dies wird Gewichtung genannt. 
-So wird ein Informationseingangsstrom mehr berücksichtigt oder nicht. 
+So wird ein Informationseingangsstrom mehr oder weniger berücksichtigt. 
 Diese Gewichtung wird durch den Backpropagation-Algorithmus angepasst und nachjustiert.
 
 \paragraph{Kernfunktion} bewirkt das Verarbeiten der gewichteten Informationseingänge. 
-Im einfachsten Fall werden alle Werte summiert zu einem Wert. 
-Es wäre aber möglich, jegliche Berechnung hier einfließen zu lassen, welche mehrere Werte verwendet und daraus einen Wert berechnet.
+Im einfachsten Fall werden alle Werte aufsummiert. 
+Es wäre aber möglich, jegliche Berechnung hier einfließen zu lassen, welche mehrere Werte verwenden und daraus einen neuen Wert berechnet.
 
-\paragraph{Aktivierungsfunktion} stellt den Ausgang eines Neuron dar. 
-Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und führt dazu, dass ein Ergebnis noch stärker ausgeprägt weiter gegeben wird oder minimiert wird. 
+\paragraph{Aktivierungsfunktion} stellt den Ausgang eines Neurons dar. 
+Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und führt dazu, dass ein Ergebnis noch stärker ausgeprägt weitergegeben wird oder minimiert wird. 
 Diese Aktivierungsfunktion ist meist die Sigmoid-Funktion oder eine Lineare-Funktion. 
 %Wobei in den vergangen Jahren die Linearen-Funktionen häufiger zum Einsatz kommen.
 \\
 
 Die einfachste Repräsentation eines Neurons lässt sich mathematisch so darstellen.
 Im Kern wird eine Summenberechnung durchgeführt. 
-Dabei werden die Eingangswerte und deren Gewichtung mit einander multipliziert, sowie diese Ergebnisse aufsummiert.
+Dabei werden die Eingangswerte und deren Gewichtung miteinander multipliziert, sowie diese Ergebnisse aufsummiert.
 Der griechische Buchstabe $\phi$ (phi) steht für die Aktivierungsfunktion des Neurons und stellt damit die Ausgabe des Neurons dar.
 \begin{equation}
 	f(x_i, w_i) := \phi ( \sum\limits_{i}{(w_i * x_i)})
@@ -84,55 +86,55 @@ Der griechische Buchstabe $\phi$ (phi) steht für die Aktivierungsfunktion des N
 \section{Bias Neuron}
 \label{sec:Bias Neuron}
 
-Ein Bias definiert einen spezial Fall eines Neurons, welches keine Dateneingänge somit auch keine Gewichtung hat, sowie keine Berechnung im Kern durchführt. 
-Dieses liefert nur einen Konstanten Wert aus wie zum Beispiel eine Eins. 
+Ein Bias definiert einen Spezialfall eines Neurons, welches keine Dateneingänge somit auch keine Gewichtung hat und keine Berechnung im Kern durchführt. 
+Dieses liefert nur einen konstanten Wert, wie zum Beispiel eine Eins. 
 Durch die konstante Auslieferung wird auch die Aktivierungsfunktion überflüssig. 
-Das Bias Neuron stellt somit einen konstanten Wert für das Netzwerk dar, beziehungsweise für die darauffolgende Ebene.
+Das Bias Neuron stellt somit einen stetig Wert für das Netzwerk dar, beziehungsweise für die darauffolgende Ebene.
 
 \section{Ebenen/Layer}
 \label{sec:Layer}
 
-Ebenen sind Zusammenschlüsse von Neuronen welche sich auf der selben Ebene befinden. 
-Diese Neuronen sind aber nicht mit einander Verbunden, sondern bekommen Daten aus der Ebene davor und geben diese an die darauffolgende Ebene weiter. 
-Diese Art wird \textbf{Hiddenlayer} bezeichnet. 
-Jedes Netzwerk benötigt zusätzlich zwei weiter Ausprägungen an Ebenen. 
+Ebenen sind Zusammenschlüsse von Neuronen, welche sich auf der selben Stufe befinden. 
+Diese Neurone sind aber nicht miteinander verbunden, sondern bekommen Daten aus der Ebene davor und geben diese an die darauffolgende Ebene weiter. 
+Dieser Typ wird \textbf{Hiddenlayer} bezeichnet. 
+Jedes Netzwerk benötigt zusätzlich zwei weitere Ausprägungen an Ebenen. 
 Diese sind:
 
 \paragraph{Inputlayer} sind Ebenen die keine vorgeschaltete Ebene haben. 
 Diese Ebene nimmt die Daten ohne Gewichtung auf und gibt sie verarbeitet an die darauffolgende Ebene weiter. 
-In gewisser Weise stellt es einen Übergang zwischen der Welt außerhalb und des Neuronalen Netzwerkes dar.
+In gewisser Weise stellt sie einen Übergang zwischen der Außenwelt und des Neuronalen Netzwerkes dar.
 
 \paragraph{Outputlayer} befindet sich am Ende eines Netzwerkes. 
-Dieser Layer hat die Aufgabe die Daten nach außerhalb weiter zu geben anstatt an das darauffolgende Netzwerk. 
-Hierbei werden die Informationen meist nur mehr für die Ausgabe hergerichtet. 
-So wird zum Beispiel die Wahrscheinlich für jeder möglichen Ausgänge berechnet.
+Dieser Layer hat die Aufgabe, die Daten nach außer weiter zu geben anstatt an das darauffolgende Netzwerk. 
+Hierbei werden die Informationen meist nur mehr für die Ausgabe aufbereitet. 
+So wird zum Beispiel die Wahrscheinlichkeit für jeden Ausgang berechnet.
 \\
 
 Abbildung ( Aufbau eines Einfachen FeedForward NN) - TikZ Grafik
 
 \section{Informationen Merken und wieder Erkennung}
 
-Durch das Anpassen der Gewichtungen bei jedem Dateneingangsstrom mit Hilfe des Backpropagation-Algorithmus wird es möglich Zustände zu speichern und diese auch zu Merken. 
-Dies führt dazu, dass sollte ein ähnlicher Dateneingang statt finden, wo zuvor schon ein ähnlicher in einem Trainingszyklus vorhanden war, dieser ähnliche erkannt wird. 
-Dieser könnte somit möglicherweise zu der selben Kategorie gehört, wie der schon zuvor schon bekannte gemachte und gelernte Dateneingang.
+Durch das Anpassen der Gewichtungen bei jedem Dateneingangsstrom mit Hilfe des Backpropagation-Algorithmus ist es möglich, Zustände zu speichern und diese auch zu merken. 
+Dies führt dazu, sollte ein ähnlicher Dateneingang stattfinden, wo zuvor schon ein ähnlicher in einem Trainingszyklus vorhanden war, dieser ähnliche erkannt wird. 
+Dieser kann möglicherweise zu derselben Kategorie gehören, wie der zuvor schon bekannte gemachte und gelernte Dateneingang.
 
 \section{Backpropagation}
 
-TODO: relative genau Algorithmus mit Aufgabe
+TODO: relative genauer Algorithmus mit Aufgabe
 
 \section{Allgemeine Probleme}
 
-Neuronale Netzwerke sind nicht Fehler und Problem los und sind nicht die Lösung auf jegliche Frage die es auf der Welt gibt. 
+Neuronale Netzwerke sind nicht Fehler- und Problemlos und können nicht jegliche Fragen in dem Themengebiet lösen. 
 Es existieren bekannte Probleme für die es Lösungen oder Lösungsansätze gibt. 
-Es existieren aber auch noch genügend andere Probleme, welche noch nicht festgestellt wurden oder als solche noch nicht erkannt worden sind. \\
+Es gibt aber auch noch genügend andere Probleme, welche noch nicht festgestellt wurden oder als solche noch nicht erkannt worden sind. \\
 
-Diese Arbeit wird auf die bekanntesten Probleme eingehen und beschreiben und auch Lösungen oder mögliche Lösungsansätze beinhalten. 
+Diese Arbeit wird auf die bekanntesten Probleme eingehen und auch Lösungen oder mögliche Lösungsansätze beinhalten. 
 
 \subsection{Overfitting}
 
-Overfitting bezeichnet ein Problem welches nicht nur Machine Learning betrifft sondern auch Menschen und andere Lebewesen. 
+Overfitting bezeichnet ein Problem welches nicht nur Machine Learning betrifft, sondern auch Menschen und andere Lebewesen. 
 Zum Beispiel ein Student lernt auf eine Prüfung und ist im Besitz einer Klausur aus einem Vorjahr. 
-Nach öfteren durchspielen der Fragen und sich selbst testen, befindet er sich in der Lage diese Klausur mit einer sehr hohen Wahrscheinlichkeit zu bestehen. 
+Nach öfterem Durchspielen der Fragen und sich selbst testen, befindet er sich in der Lage diese Klausur mit einer sehr hohen Wahrscheinlichkeit zu bestehen. 
 Dabei hat sich die Klausur in seinem Gehirn eingeprägt aber nicht das Stoffgebiet zu welchem er eine Klausur schreiben muss. 
 Das Problem wird als Overfitting bezeichnet und beschreibt das etwas gemerkt wurde aber nicht gelernt worden ist und somit eine Abwandlung von Informationen nicht wiedererkannt werden.
 
@@ -158,15 +160,18 @@ TODO
 Neuronale Netzwerk können sehr vielseitig eingesetzt werden. 
 Grundsätzlich lässt sich jedes Problem, welches als Funktion repräsentiert werden kann, durch ein Neuronales Netzwerk approximieren. \\
 
-In dieser Arbeit werde sieben Hauptdomänen erklärt und beschreiben, in welchen Neuronale Netzwerke öfters zum Einsatz kommen und eingesetzt werden.
+In dieser Arbeit werde sieben Hauptdomänen erklärt und beschrieben.%, in welchen Neuronale Netzwerke öfters zum Einsatz kommen und eingesetzt werden.
+Im speziellen wird auf die Neuronalen Netzwerke eingegangen, welche öfter zum Einsatz kommen und eingesetzt werden.
 
 \subsection{Clustering}
 \label{subsec:Clustering}
 
-Clustering Problem bezeichnen das Einordnen von Daten in Klassen oder Gruppierungen. 
-Diese Gruppierungen können von einem Netzwerk selbst definiert werden oder festgelegt werden in wie viele Gruppen die Daten eingeordnet werden sollen. 
-Diese Netzwerke agieren unsupervised und besitzen meist die Möglichkeit sich nach dem Trainieren, sich noch selbst weiter anzupassen. 
-Dies erlaubt dem Netzwerk auf sich ändernde Daten anzupassen und das Clustern und Gruppieren weiter zu führen ohne ein neues Netzwerk erstellen zu müssen.
+Clustering Problem bezeichnet das Einordnen von Daten in Klassen oder Gruppierungen. 
+Diese Gruppierungen können von einem Netzwerk selbst definiert werden oder manuell festgelegt werden. 
+% in wie viele Gruppen die Daten eingeordnet werden sollen.  
+Es kann die Anzahl der Gruppen in welche die Daten eingeordnet werden festgelegt werden. 
+Diese Netzwerke agieren unsupervised und besitzen meist die Möglichkeit sich nach dem Trainieren, noch selbst weiter anzupassen. 
+Dies erlaubt dem Netzwerk auf sich ändernde Daten anzupassen und das Clustern und Gruppieren weiterzuführen ohne ein neues Netzwerk erstellen zu müssen.
 
 \subsection{Regression}
 \label{subsec:Regression}
@@ -177,16 +182,16 @@ TODO
 \label{subsec:Classification}
 
 Classification Problem ist in gewisser Weise das Gegenstück zum Regression Problem. 
-Hier werden Daten dem Netzwerk übergeben und dieses muss vorhersagen zu welcher Klasse sie gehören. Dies wird in einer supervised Umgebung durchgeführt. 
+Hier werden Daten dem Netzwerk übergeben, und dieses muss vorhersagen zu welcher Klasse sie gehören. Dies wird in einer supervised Umgebung durchgeführt. 
 Die Klassen für die Vorhersage sind vorab schon bekannt und können im den Daten aus dem Outputlayer des Netzwerks  verglichen werden und infolge Justierungen durchgeführt werden.
 
 \subsection{Predict}
 \label{subsec:Predict}
 
 Predict Problemstellungen kommen im Kontext von Business beziehungsweise von E-Business zur Anwendung. 
-Hier muss anhand von meist Zeit gesteuerten Ereignisse eine Vorhersage getroffen werden. 
-Zum Beispiel an der Börse ändern sich täglich die Kurse teilweise so rasch, dass es für Menschen praktisch nicht mehr möglich ist diesen zu Folgen. 
-Im Falle der Börse sind nun aber Zeitlich gestützte Kurse aus der Vergangenheit verfügbar. 
+Hier muss anhand von meist zeitgesteuerten Ereignisse eine Vorhersage getroffen werden. 
+Zum Beispiel an der Börse ändern sich täglich die Kurse relativ rasch, sodass es für Menschen praktisch nicht mehr möglich ist, diesen zu Folgen. 
+Im Falle der Börse sind nun aber zeitlich gestützte Kurse aus der Vergangenheit verfügbar. 
 Diese werden als Trainingsset für ein Netzwerk verwendet, um den nächsten Tag möglicherweise vorherzusagen. 
 
 \subsection{Robotics}
@@ -204,8 +209,8 @@ Diese kann von Anfang an durchgeführt werden, sowie automatisiert.
 Computer Vision zielt darauf ab, einem Computer das Sehen und Verstehen von Bildern zu ermöglichen. 
 Diese Technik findet im Jahr 2016 schon häufig Einsatz. 
 So werden automatisiert Bilder analysiert, beschrieben sowie auch klassifiziert. 
-Diese Dienste werden auch Kommerziell eingesetzt und auch angeboten. 
-In autonom gesteuerten Fahrzeugen findet dies auch Verwendung, um Objekte zu Erkennen und zu Verstehen. 
+Das Dienste werden auch kommerziell eingesetzt und auch angeboten. 
+In autonom gesteuerten Fahrzeugen findet dies Anwendung auch Verwendung um Objekte zu erkennen und zu verstehen. 
 So muss zum Beispiel ein Verkehrszeichen von einem Passanten unterschieden werden können.
 
 \subsection{Optimization}
@@ -216,14 +221,14 @@ So werden immer bessere schnellere Algorithmen entwickelt, welcher konkrete Prob
 Durch das Thema BigData entstand ein Problem, sodass selbst sehr effiziente Algorithmen einige Problemstellungen nicht mehr in konstanter oder adäquater Zeit lösen können. 
 Das 'Salesman' Problem gehört zu diesen Problemen. 
 Durch Optimization wird in konstanter Zeit eine Lösung ermittelt, welche nicht die beste Lösung repräsentiert. 
-Diese Lösung liegt aber im Rahmen von einer bestimmten definierten Toleranz und könnte als Lösung verwendet werden.
+Diese Lösung liegt aber im Rahmen von einer bestimmten definierten Toleranz und kann als Lösung verwendet werden.
 
 %\cite{AI3}
 
 \section{Neuronale Netzwerktypen}
 
-Aus der Zeit heraus haben sich diverse gut funktionierende Neuronale Netzwerktypen gebildet beziehungsweise sind entwickelt und erforscht worden. 
-Diese Netzwerktypen definieren Richtlinien oder Ansätze zu möglichen Netzwerken, welche aber nicht komplett übernommen werden müssen sonder einen kreativen Spielraum ermöglichen. \\
+In den letzten Jahren heraus haben sich diverse gut funktionierende Neuronale Netzwerktypen gebildet,  beziehungsweise sind entwickelt und erforscht worden. 
+Diese Netzwerktypen definieren Richtlinien oder Ansätze zu möglichen Netzwerken, welche aber nicht komplett übernommen werden müssen, sonder einen kreativen Spielraum ermöglichen. \\
 
 In dieser Arbeit werde die wichtigsten Typen und ihre Eigenschaften erklärt. 
 Für die folgenden Punkte ist es erforderlich ein Grundverständnis für Neuronale Netzwerk sowie über ihre Funktionsweise zu besitzen, sollte dies nicht der Fall sein - Punkt \ref{sec:Machine Learning} bis \ref{sec:Domänenklassen}.
@@ -231,7 +236,7 @@ Für die folgenden Punkte ist es erforderlich ein Grundverständnis für Neurona
 \subsection{FeedForward}
 \label{subsec:FeedForward}
 
-FeedForward Netzwerke (FFN) waren bis for einigen Jahren noch der Standard.
+FeedForward Netzwerke (FFN) waren bis for einigen Jahren noch der Stand der Forschung.
 Auf ihnen basieren einige andere Typen von Netzwerken, die bekanntesten werden in dieser Arbeit noch behandelt.
 Ein FFN passiert auf den Grundlagen eines Neurons \ref{sec:Neuron}, sowie dem ausbauen dieses zu Ebenen mit mehreren Neuronen \ref{sec:Layer}.
 So ein Netzwerk besitzt einen Inputlayer, einen Hiddenlayer sowie einen Outputlayer.
@@ -246,8 +251,8 @@ Die einzelnen Ebenen müssen dabei aber nicht voll verbunden sein, sondern die V
 Self-Organizing Map (SOM) findet vor allem im Bereich der Classification  \ref{subsec:Classification} Verwendung und wurden von Kohonen (1988) erfunden. 
 Es ist nicht erforderlich einer SOM die Information zu geben, in wie viele Gruppen oder Klassen die Daten unterteilt werden sollen. 
 Dadurch gehören es zu den Systemen, welche unsupervised trainiert werden. 
-Außerdem besitzen es die Möglichkeit, sich auch nach der Trainingsphase auf sich ändernde Eingangsdaten anzupassen. 
-Kohonen entwarf die SOM mit zwei Ebenen, ein Inputlayer und ein Outputlayer ohne Hidenlayer. 
+Außerdem besitzen sie die Möglichkeit, sich auch nach der Trainingsphase auf sich ändernde Eingangsdaten anzupassen. 
+Kohonen entwarf die SOM mit zwei Ebenen, ein Inputlayer und ein Outputlayer ohne Hiddenlayer. 
 Der Inputlayer propagiert Muster an den Outputlayer, wo der Dateneingang gewichtet wird. 
 In dem Outputlayer gewinnt das Neuron, welches den geringsten Abstand zu den Eingangsdaten hat.
 Dies geschieht durch das Berechnen der euklidischen Distanz. 
